--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "pip-netflix",
+  "name": "Evervideo",
   "minimum_chrome_version": "24.0.1307.0",
-  "version": "2.3.3",
+  "version": "1.0.0",
   "icons": {
     "16": "icon_16.png",
     "128": "icon_128.png"
